--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,11 +1,9 @@
 @use "global";
 
-body {
-  background-color: #232323;
-  color: #fff;
-}
 main {
   padding-bottom: 20vh;
+  color:#fff;
+  background: #232323;
 }
 #landing {
   position: relative;
